# PolySOS

./: .gitignore  README.md  pyproject.toml
examples/matlab/: basic_sos_example.m
examples/python/: basic_sos_example.py
matlab/: localizing_matrix.m  moment_matrix.m  multiindex.m  sos_chordal_sdp.m  sos_relaxation.m  sos_sdp.m  sos_socp.m
matlab/chordal_decomposition/: LexBFS.m  LexLargest.m  genChordalGraph.m  maxCliques.m
src/polysos/algebra/monomial/: __init__.py  monomial.py
src/polysos/algebra/polynomial/: polynomial.py
src/polysos/chordal_graph/: chordal_graph.py  ordering.py
src/polysos/moments/: moment_matrix.py  multiindex.py
src/polysos/sos_relaxation/: sos_relaxation.py
src/polysos/sos_relaxation_solvers/: sos_chordal_sdp.py  sos_sdp.py  sos_socp.py
tests/: test1.py  test2.py  test3.py
