[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polysos"
version = "0.1.0"
description = "Polynomial optimization via Sum-of-Squares (SOS) and moment relaxations"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Roozbeh Abolpour" }
]

license = { text = "MIT" }

keywords = [
  "optimization",
  "polynomial optimization",
  "SOS",
  "semidefinite programming",
  "moment relaxation",
  "nonconvex optimization"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "numpy>=1.23",
  "cvxpy>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]